# uyuni

./: Dockerfile
.github/scripts/: changelog.rb
.github/workflows/: check_translations.yml  python-checkstyle.yml  python-lint.yml
backend/: Makefile.python  pylint-ignore.md  pylintrc  spacewalk-backend.changes
backend/common/: __init__.py  gpgv.py  repo.py
backend/common/test/unit-test/: test_repo.py
backend/satellite_tools/exporter/: xmlWriter.py
backend/test/: docker-backend-common-tests.sh
containers/proxy-httpd-image/: uyuni-configure.py
containers/proxy-salt-broker-image/: uyuni-configure.py
containers/proxy-squid-image/: uyuni-configure.py
containers/proxy-ssh-image/: uyuni-configure.py
containers/proxy-tftpd-image/: tftp_wrapper.py  uyuni-configure.py
python/spacewalk/: spacewalk-backend.spec
python/spacewalk/satellite_tools/: Makefile  reposync.py  satsync.py  spacewalk-data-fsck  spacewalk-update-signatures
python/spacewalk/server/: rhnChannel.py  rhnPackage.py  rhnPackageUpload.py
spacecmd/: pyproject.toml  setup.py  spacecmd.changes  spacecmd.changes.agraul.modern-packaging-spacecmd  spacecmd.changes.agraul.spacecmd-singlespec  spacecmd.spec
spacecmd/src/spacecmd/: __init__.py
spacecmd/tests/: helpers.py  test_activationkey.py  test_api.py  test_cryptokey.py  test_custominfo.py  test_shell.py  test_snippet.py  test_softwarechannel.py  test_ssm.py
susemanager/: susemanager.changes
susemanager-utils/susemanager-sls/: susemanager-sls.changes
utils/tests/: test_spacewalk_manage_channel_lifecycle.py
(+25 files in other folders)
